[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seattle-housing-predictor"
version = "0.0.1"
description = "Predicting Seattle housing prices using machine learning to support first-time homebuyers and real estate decision-making."
authors = [
  { name = "Jaylen Carrillo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["seattle-housing-predictor"]
include = ["pyproject.toml", "seattle-housing-predictor/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["seattle-housing-predictor"]
force-sort-within-sections = true

